Refresh docs for Pullfish 1.0 171025 branding

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@
 Jorge Ruiz
 ChatGPT
 
-# Pullfish is a derivative of Stockfish 17.1. The original Stockfish
+# Pullfish 1.0 171025 is a derivative of Stockfish 17.1. The original Stockfish
 # contributors remain credited below.
 
 # Founders of the Stockfish project and Fishtest infrastructure
